--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,7 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
+        applicationId 'co.paystack.flutterpaystack'
         minSdkVersion 23
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionCode 21
