--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -22,11 +22,11 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
-        coreLibraryDesugaringEnabled true // Enable desugaring
+        // coreLibraryDesugaringEnabled true // Enable desugaring
     }
 
-    kotlin {
-        jvmToolchain(21)  // Set the JVM version to 21
+    kotlinOptions {
+        jvmTarget = '21'
     }
 
     sourceSets {
@@ -40,12 +40,12 @@ android {
     defaultConfig {
         applicationId "co.paystack.flutterpaystack"
         minSdkVersion 23
-        targetSdkVersion 34
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
          // added the script below in fixing a bug
-        multiDexEnabled true
+        // multiDexEnabled true
     }
 
     buildTypes {
@@ -61,6 +61,6 @@ flutter {
 
 dependencies {
     // implementation platform("com.google.firebase:firebase-bom:33.9.0")
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4' // Use the latest version
-    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4' // Use the latest version
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
