--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,6 +28,16 @@ android {
     namespace 'co.paystack.flutterpaystack'
     compileSdkVersion 35
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+        // coreLibraryDesugaringEnabled true // Enable desugaring
+    }
+
+    kotlinOptions {
+        jvmTarget = '21' // set java compatibility to 21
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -36,10 +46,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionCode 21
         versionName "3.0.10"
-    }
-
-    kotlin {
-        jvmToolchain(21)  // Set the JVM version to 21
     }
 
     lintOptions {
