--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -20,8 +20,8 @@ android {
     compileSdkVersion 34
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_21
-        targetCompatibility JavaVersion.VERSION_21
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
         // coreLibraryDesugaringEnabled true // Enable desugaring
     }
 
